# curp

./: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
.github/workflows/: build.yml
cmake/: Config.cmake.in
doc/: conf.py  construccion.rst  curp.rst  index.rst  instalacion.rst  requirements.txt  validacion.rst
doc/instructivo/: construccion.rst  verificacion.rst
include/: curp.h  trie.h
src/: curp.c  trie.c
tests/: check_curp.c  check_curp_examples.c  check_curp_examples.h  check_curp_pbt.c  check_curp_pbt.h  strategies.h
